mise a jour index

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="row offset-md-1">
               <div class="col-md-4 part1" data-aos="fade-up" data-aos-delay="200" data-aos-duration="2000">
                 <h3>Qualités</h3>
-                <p> Je suis jeune et passioné . J'ai 18ans. Je suis disposer à bosser tout en apprenant et pret à travailler en equipe </p>
+                <p> Je suis jeune et passioné . Je suis disposer à bosser en presentiel comme en freelance </p>
               </div>
               <div class="col-md-4 part1" data-aos="fade-down" data-aos-delay="200" data-aos-duration="2000">
                 <h3>Compétences</h3>
