--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
         <header class="container">
           <div class="row">
-            <nav class=" nav col-md-12 col-12 ">
+            <nav class=" nav col-md-12 col-12 col-xl-12 ">
               <div class="logo">
                 Frydev
               </div>
@@ -53,10 +53,10 @@
 
         <section class="container section2-css" id="apropos">
           <div class="row">
-            <div class=" offset-md-1 col-md-11 col-12">
+            <div class=" offset-md-1 col-md-11 col-11 col-xl-11">
               <h2 class="heading"> A Propos</h2>
             </div>
-            <div class=" offset-md-1 col-md-10  col-12 text" data-aos="fade-right" data-aos-delay="200" data-aos-duration="3000">
+            <div class=" offset-md-1 col-md-11 fs-4  col-12 text" data-aos="fade-right" data-aos-delay="200" data-aos-duration="3000">
               Je suis Fredy BEHANZIN, jeune developpeur web full-stack passioné et ambiteux.<br/>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, consectetur animi facere itaque illo minus, temporibus omnis exercitationem facilis qui nisi. Quisquam inventore, tempore possimus   
             </div>
