--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
           <div class="row">
             <h2 class="heading offset-md-1 col-md-11">Atout</h2>
           </div>
-          <div class="row offset-md-1">
-              <div class="col-md-4 part1" data-aos="fade-up" data-aos-delay="200" data-aos-duration="2000">
+          <div class="row offset-md-1 col-12 col-md-11 col-12">
+              <div class="col-md-4  part1" data-aos="fade-up" data-aos-delay="200" data-aos-duration="2000">
                 <h3>Qualités</h3>
                 <p> Je suis jeune et passioné . Je suis disposer à bosser en presentiel comme en freelance </p>
               </div>
-              <div class="col-md-4 part1" data-aos="fade-down" data-aos-delay="200" data-aos-duration="2000">
+              <div class="col-md-4 col-12  part1" data-aos="fade-down" data-aos-delay="200" data-aos-duration="2000">
                 <h3>Compétences</h3>
                 <p> Je suis developpeur web full-stack. J'utilise HTML, CSS , Javascript, PHP ainsi que des framesworks comme Bootstrap react.js et vue.js </p>
 
               </div>
-              <div class="col-md-4 part1" data-aos="flip-right" data-aos-delay="200" data-aos-duration="2000">
+              <div class="col-md-4 col-12  part1" data-aos="flip-right" data-aos-delay="200" data-aos-duration="2000">
                 <h3>Experiences</h3>
                 <p>J'ai déjà realisés plusieurs projets pour differentes sociétés de la place .Bientot **ans d'Experiences.</p>
 
@@ -142,8 +142,7 @@
           </div>
 
         </section>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.0776945676707!2d2.417587625922528!3d6.383973643606417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1023559e304967b3%3A0xcda8782d0dc0e4c8!2sGbedjromede%201%2C%20Cotonou%2C%20Benin!5e0!3m2!1sen!2sng!4v1741861324309!5m2!1sen!2sng" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
+       
 
         <footer class="footer container">
           <div>
