--- a/index.html
+++ b/index.html
@@ -38,24 +38,14 @@
     </div>
   </header>
 
-
-  <section class="container">
-    <div class="row">
-      <div class="col-md-12 justify-content-around">
-        <div class="" syle="text-align: justify;">
-          Bienvenue sur mon portfolio
-        </div>
-      </div>
-    </div>
-  </section>
-
-
   <section class="container">
     <div class="row section1-css">
       <div class="col-md-6 col-12">
         <p class="except"> <span>Salut !</span> <i class="fa-solid fa-face-smile"></i> <br /> Je suis Frédy
           BEHANZIN<br />
-          Developpeur web full-stack résidant à gbèdjromèdé, cotonou.</p>
+          Developpeur web full-stack passioné et ambiteux résidant à gbèdjromèdé, cotonou.<br />
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+        </p>
       </div>
 
       <div class="col-md-5 col-12" data-aos="flip-left" data-aos-delay="500" data-aos-duration="2000">
@@ -64,47 +54,51 @@
     </div>
   </section>
 
-  <section class="container section2-css" id="apropos">
-    <div class="row">
-      <div class=" offset-md-1 col-md-11 col-11 col-xl-11">
-        <h2 class="heading"> A Propos</h2>
-      </div>
-      <div class=" offset-md-1 col-md-11 fs-4  col-12 text" data-aos="fade-right" data-aos-delay="200"
-        data-aos-duration="3000">
-        Je suis Fredy BEHANZIN, jeune developpeur web full-stack passioné et ambiteux.<br />
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, consectetur animi facere itaque illo minus,
-        temporibus omnis exercitationem facilis qui nisi. Quisquam inventore, tempore possimus
-      </div>
-    </div>
-  </section>
-
   <section class="container section3-css" id="atout">
     <div class="row">
-      <h2 class="heading offset-md-1 col-md-11">Atout</h2>
-    </div>
-    <div class="row col-12 col-md-12 col-12">
-      <div class="col-md-4  box" data-aos="fade-up" data-aos-delay="200" data-aos-duration="2000">
-        <h3>Qualités</h3>
+      <div class="col-md-12  box" data-aos="fade-up" data-aos-delay="200" data-aos-duration="2000">
+        <h3 class="mb-4 text-warning">Qualités</h3>
         <p class=""> Je suis jeune et passioné . Je suis disposer à bosser en presentiel comme en freelance </p>
       </div>
-      <div class="col-md-4 col-12  box" data-aos="fade-down" data-aos-delay="200" data-aos-duration="2000">
-        <h3>Compétences</h3>
-        <p class=""> J'utilise HTML, CSS , Javascript, PHP ainsi que des framesworks comme Bootstrap,tailwind CSS, react.js , Laravel </p>
+    </div>
 
+    <div class="row">
+      <div class="col-md-12 col-12  box" data-aos="fade-down" data-aos-delay="200" data-aos-duration="2000">
+        <h3 class="mb-4 text-warning">Compétences</h3>
       </div>
-      <div class="col-md-4 col-12  box" data-aos="flip-right" data-aos-delay="200" data-aos-duration="2000">
-        <h3>Experiences</h3>
-        <p class="">J'ai déjà realisés plusieurs projets pour differentes sociétés de la place .Bientot **ans
-          d'Experiences.</p>
+      <div class="col-md-5 offset-md-1 mx-auto">
+        <strong>Languages <i class="fa-solid fa-code"></i></strong>
+        <ul class="mt-4">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Javascript</li>
+          <li>PHP</li>
+          <li></li>
+        </ul>
+      </div>
+      <div class="col-md-5 offset-md-1 mx-auto">
+        <strong class="mytouch">Frameworks/Bibliotheques <i class="fa-solid fa-layer-group"></i> </strong>
+        <ul class="mt-4">
+          <li>Bootstrap</li>
+          <li>Tailwind CSS</li>
+          <li>React.js</li>
+          <li>Laravel</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 col-12  box" data-aos="flip-right" data-aos-delay="200" data-aos-duration="2000">
+        <h3 class="mb-4 text-warning">Experiences</h3>
+        <p class="">
+
+        </p>
 
       </div>
     </div>
   </section>
 
   <section class="section4-css container" id="contact">
-    <div class="row">
-      <h2 class="heading offset-md-1 col-md-11">Me contacter</h2>
-    </div>
     <div class="row together">
       <span class=" content add">Frydev</span>
 
