--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <section class="container">
     <div class="row section1-css">
-      <div class="col-md-6 col-12">
+      <div class="col-md-6">
         <p class="except"> <span>Salut !</span> <i class="fa-solid fa-face-smile"></i> <br /> Je suis Frédy
           BEHANZIN<br />
           Developpeur web full-stack passioné et ambiteux résidant à gbèdjromèdé, cotonou.<br />
@@ -48,7 +48,7 @@
         </p>
       </div>
 
-      <div class="col-md-5 col-12" data-aos="flip-left" data-aos-delay="500" data-aos-duration="2000">
+      <div class="col-md-5" data-aos="flip-left" data-aos-delay="500" data-aos-duration="2000">
         <img src="assets/image/professional.png" class="col-md-12 col-12">
       </div>
     </div>
