--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <section class="container">
     <div class="row section1-css">
-      <div class="col-md-6">
+      <div class="col-md-7">
         <p class="except"> <span>Salut !</span> <i class="fa-solid fa-face-smile"></i> <br /> Je suis Frédy
           BEHANZIN<br />
           Developpeur web full-stack passioné et ambiteux résidant à gbèdjromèdé, cotonou.<br />
@@ -148,7 +148,7 @@
           </div>
 
           <br />
-          <button type="btn" class="btn-color" name="send">Envoyer</button>
+          <button type="btn" class="btn-color text-white" name="send">Envoyer</button>
         </form>
       </div>
     </div>
