--- a/index.html
+++ b/index.html
@@ -40,16 +40,17 @@
 
   <section class="container">
     <div class="row section1-css">
-      <div class="col-md-7">
-        <p class="except"> <span>Salut !</span> <i class="fa-solid fa-face-smile"></i> <br /> Je suis Frédy
-          BEHANZIN<br />
+      <div class="col-md-7 col-12">
+        <p class="except"> 
+          <span>Salut !</span> <i class="fa-solid fa-face-smile"></i> <br /> 
+          Je suis Frédy BEHANZIN.
           Developpeur web full-stack passioné et ambiteux résidant à gbèdjromèdé, cotonou.<br />
           Lorem ipsum dolor sit amet consectetur, adipisicing elit.
         </p>
       </div>
 
       <div class="col-md-5" data-aos="flip-left" data-aos-delay="500" data-aos-duration="2000">
-        <img src="assets/image/professional.png" class="col-md-12 col-12">
+        <img src="assets/image/professional.png" class="col-md-12 col-12 img-fluid" alt="image de profil">
       </div>
     </div>
   </section>
@@ -148,7 +149,7 @@
           </div>
 
           <br />
-          <button type="btn" class="btn-color text-white" name="send">Envoyer</button>
+          <button type="btn" class="btn-color" name="send">Envoyer</button>
         </form>
       </div>
     </div>
