--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
 
       <div class="col-md-5" data-aos="flip-left" data-aos-delay="500" data-aos-duration="2000">
-        <img src="assets/image/professional.png" class="col-md-12 col-12 img-fluid" alt="image de profil">
+        <img src="assets/image/professional.png" class="col-md-12 col-12" alt="image de profil">
       </div>
     </div>
   </section>
